--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -9,7 +9,7 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     container:
-      image: public.ecr.aws/apama/apama-cumulocity-builder:10.15-ubi9
+      image: public.ecr.aws/apama/apama-builder:latest
       options: --user 0
 
     env:
