Actually, I think we can just use the standard tenant options watcher approach

--- a/blocks/Python/python-plugin.yaml
+++ b/blocks/Python/python-plugin.yaml
@@ -2,8 +2,10 @@ eplPlugins:
   PythonBlockPlugin:
     pythonFile: "${PARENT_DIR}/pythonBlockPlugin.py"
     class: PythonBlockPlugin
+    isolation: "${analytics.builder.pythonBlockIsolation}"
     pythonPath:
       - "${PARENT_DIR}/venv/lib/python3.9/site-packages"
       - "${PARENT_DIR}/requirements"
     config:
       requirementsDir: "${PARENT_DIR}/requirements"
+      requirements: "${analytics.builder.pythonBlockRequirements}"
