Use a better mechanism to provide requirements and packages

--- a/blocks/Python/python-plugin.properties
+++ b/blocks/Python/python-plugin.properties
@@ -1,2 +1,3 @@
 analytics.builder.pythonBlockIsolation=dedicated
 analytics.builder.pythonBlockRequirements=
+analytics.builder.pythonBlockPackages=
