--- a/blocks/Python/python-plugin.properties
+++ b/blocks/Python/python-plugin.properties
@@ -1,3 +1,3 @@
-analytics.builder.pythonBlockIsolation=dedicated
-analytics.builder.pythonBlockRequirements=
-analytics.builder.pythonBlockPackages=
+streaminganalytics.pythonBlockIsolation=dedicated
+streaminganalytics.pythonBlockRequirements=
+streaminganalytics.pythonBlockPackages=
