--- a/blocks/Python/python-plugin.yaml
+++ b/blocks/Python/python-plugin.yaml
@@ -2,11 +2,11 @@ eplPlugins:
   PythonBlockPlugin:
     pythonFile: "${PARENT_DIR}/pythonBlockPlugin.py"
     class: PythonBlockPlugin
-    isolation: "${analytics.builder.pythonBlockIsolation}"
+    isolation: "${streaminganalytics.pythonBlockIsolation}"
     pythonPath:
       - "${PARENT_DIR}/venv/lib/python3.9/site-packages"
       - "${PARENT_DIR}/requirements"
     config:
       requirementsDir: "${PARENT_DIR}/requirements"
-      requirements: "${analytics.builder.pythonBlockRequirements}"
-      packages: "${analytics.builder.pythonBlockPackages}"
+      requirements: "${streaminganalytics.pythonBlockRequirements}"
+      packages: "${streaminganalytics.pythonBlockPackages}"
